Add a bar chart counting internal and external IP addresses

--- a/web_client/views/hpcmpWidget.pug
+++ b/web_client/views/hpcmpWidget.pug
@@ -2,4 +2,5 @@
   button.stop Stop
   button.start Start
   .g-item-hpcmp-container
-    .volume-chart
+    .volume-chart(style="width: 550px; float: left;")
+    .bar-chart
