Add another bar chart to show service mix

--- a/web_client/views/hpcmpWidget.pug
+++ b/web_client/views/hpcmpWidget.pug
@@ -1,6 +1,7 @@
 .g-item-hpcmp
   button.stop Stop
   button.start Start
-  .g-item-hpcmp-container
-    .volume-chart(style="width: 550px; float: left;")
-    .bar-chart
+  .g-item-hpcmp-container(style="display: flex;")
+    .volume-chart(style="width: 600px;")
+    .bar-chart(style="width: 200px;")
+    .bar-chart-service
